minor gtest file added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(GoogleTest VERSION 0.1.0 LANGUAGES C CXX)
 include(CTest)
 enable_testing()
 
+add_subdirectory(test)
+
 add_executable(GoogleTest main.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
