--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,14 @@ enable_testing()
 
 add_subdirectory(test)
 
+add_compile_options(-pg)
+add_link_options(-pg)
+
 add_executable(GoogleTest main.cpp)
+
+if(UNIX)
+    target_link_libraries(GoogleTest pthread)
+endif()
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
